Fix srcset attribute setting order issues by aligning with spec

https://bugs.webkit.org/show_bug.cgi?id=190031
https://bugs.webkit.org/show_bug.cgi?id=276586

Reviewed by NOBODY (OOPS!).

Currently the order of setting image attributes matter, as some
attribute setting processing model triggers an image load.
Therefore setting some of these before others can impact the asset being
downloaded (or if an asset is downloaded at all).

As specified, this should not happen, as image loading awaits
a microtask before being triggered.

This PR aligns the implementation with the spec, and fixes these related
issues.

* Source/WebCore/loader/ImageLoader.cpp:
 (WebCore::ImageLoader::updateFromElementIgnoringPreviousError): Await
 a microtask before calling updateFromElement.
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/attribute-order-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/attribute-order.html: Added.